卸载反馈模板增加自动填写字段

--- a/.github/ISSUE_TEMPLATE/uninstall_feedback.yml
+++ b/.github/ISSUE_TEMPLATE/uninstall_feedback.yml
@@ -24,3 +24,24 @@ body:
       placeholder: 可选填写...
     validations:
       required: false
+  - type: input
+    id: version
+    attributes:
+      label: 插件版本
+      description: 自动填写，无需修改
+    validations:
+      required: false
+  - type: input
+    id: user_id
+    attributes:
+      label: 用户ID
+      description: 自动填写，无需修改
+    validations:
+      required: false
+  - type: input
+    id: device_id
+    attributes:
+      label: 设备ID
+      description: 自动填写，无需修改
+    validations:
+      required: false
